# WalkAMileGame

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.frontend  Dockerfile.mongo_mock  LICENSE  README.md  compose.yaml  delete_me.txt  docker-compose.test.yml  init-db.js  pyproject.toml  tasks.py
.github/workflows/: dev.yaml  dev.yml  main.yml
backend/: main.py
backend/app/: api.py  cleanup.py  code_management.py  db.py  models.py  security.py
backend/backend_tests/: backend_api_test.py  backend_cleanup_test.py  backend_code_management_test.py  backend_db_test.py  backend_main_test.py  backend_room_test.py  backend_scheduler_test.py  backend_security_test.py  conftest.py
backend/e2e_tests/: conftest.py  frontpage_test.py  login_test.py  sample_test.py
backend/manual_tests/: manual_cleanup_test.py
documentation/: Instructions.md  definition_of_done.md  instructions.md  local_development.md  project_wiki.md
documentation/customer_meetings/: meeting_1.10.md  meeting_1.8.md  meeting_12.11.md  meeting_15.10.md  meeting_17.9.md  meeting_26.11.md  meeting_29.10.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.jsx.html  index.html  main.jsx.html
frontend/src/: App.css  App.jsx  EnergyMarkers.css  GameBoard.jsx  Login.css  Login.jsx  api.js  index.css  main.jsx
frontend/src/__tests__/: App.test.jsx  Circumstances.test.jsx  EditUsers.test.jsx  Game.test.jsx  GameBoard.test.jsx  GameComparison.test.jsx  GameboardSettings.test.jsx  GamemasterProgress.test.jsx  HomePage.test.jsx  HostGame.test.jsx  LandingPage.test.jsx  Lobby.test.jsx  Login.test.jsx  SpectatorTeamSelection.test.jsx
frontend/src/components/: AboutUs.jsx  Circumstances.jsx  ConnectionStatus.jsx  (+17 more)
manifests/: backend-route.yaml  backend-service.yaml  deployment.yaml  frontend-deployment.yaml  imagestreambackend.yaml  imagestreamfrontend.yaml  mongo-deployment.yaml  redirectroute.yaml  route.yaml  service.yaml  ubuntu-deployment.yaml  volumeclaim.yaml
(+42 files in other folders)
